src/FinancialForce Accounting/objects/codaColumnProperty__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce print Formatter.</description>
    <fields>
        <fullName>DataFormatCode__c</fullName>
        <label>DataFormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataFormat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DataFormat</label>
        <referenceTo>codaFormatData__c</referenceTo>
        <relationshipLabel>Column Properties (DataFormat)</relationshipLabel>
        <relationshipName>ColumnProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ListSequence__c</fullName>
        <label>ListSequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberBoxingSpecif__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NumberBoxingSpecif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberBoxing__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NumberBoxing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TableProperty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TableProperty</label>
        <referenceTo>codaTableProperty__c</referenceTo>
        <relationshipLabel>Column Properties</relationshipLabel>
        <relationshipName>Column_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TitleFormatCode__c</fullName>
        <label>TitleFormatCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TitleFormat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TitleFormat</label>
        <referenceTo>codaFormatData__c</referenceTo>
        <relationshipLabel>Column Properties (TitleFormat)</relationshipLabel>
        <relationshipName>Column_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UseTitleFormat__c</fullName>
        <label>UseTitleFormat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>com_printformat_inherit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VocabId__c</fullName>
        <label>VocabId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>useDataFormat__c</fullName>
        <label>useDataFormat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>com_printformat_inherit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Column Property</label>
    <nameField>
        <label>Column Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Column Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>